# IniBuffer

./: .gitignore  .gitmodules  .travis.yml  IniFile.cpp  LICENSE  README.md  ini_file.h  main.cpp  str_manip.h  test.ini
data/: performance.ini
media/: IniPipeline.odp
results/: performance_result.ini  readme.txt  test_result.ini
src/: CMakeLists.txt  ini_buffer.h  main.cpp
src/app/: CMakeLists.txt  cpp_example.cpp  python_example.py
src/ini_buffer/: CMakeLists.txt  ini_buffer.cpp  ini_buffer.h  str_manip.h
src/python_interface/: CMakeLists.txt  ini_buffer_py.h  python_interface.cpp
